<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/wrapper"
    app:cardCornerRadius="10dp"
    android:elevation="5dp"
    android:layout_margin="5dp"
    android:background="@android:color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/storeImage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/imageBackground"
            android:scaleType="centerInside"
            android:src="@drawable/ic_default_iamge_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/storeStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/open_store_background"
            android:fontFamily="@font/opensans_regular"
            android:paddingStart="10dp"
            android:paddingTop="2dp"
            android:paddingEnd="10dp"
            android:paddingBottom="2dp"
            android:text="@string/store_open"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RelativeOverlap,SmallSp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@+id/storeImage">

            <TableRow>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/storeName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_semibold"
                    android:text="@string/store_name"
                    android:textSize="16sp"
                    android:layout_weight="1"
                    android:layout_gravity="start|center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/storeImage" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/storeTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/opensans_regular"
                    android:textSize="14sp"
                    android:layout_gravity="center|top|end"
                    android:textAlignment="textEnd"
                    android:text="@string/store_time"
                    android:layout_weight="1"/>

            </TableRow>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/storeAddress"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/store_address"
                android:textSize="14sp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/storeRange"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginTop="5dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/store_range"
                android:layout_gravity="end|top"
                android:textAlignment="textEnd"
                android:textSize="14sp" />

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>