<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/serviceWrapper"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="5dp"
    android:elevation="5dp">

    <RelativeLayout
        android:id="@+id/viewForeground"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/white"
        android:padding="5dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/serviceImage"
            android:layout_width="70dp"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:padding="5dp"
            android:src="@drawable/ic_plotter"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/serviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_toEndOf="@id/serviceImage"
            android:fontFamily="@font/opensans_semibold"
            android:text="@string/service_name"
            android:textSize="16sp" />

        <LinearLayout
            android:id="@+id/minWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/serviceName"
            android:layout_alignStart="@id/serviceName"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_file" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/serviceMinimalOrder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/store_minimal_order"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/minWrapper"
            android:layout_marginTop="5dp"
            android:layout_alignStart="@id/serviceName"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_label"
                android:rotation="-45" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/servicePrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/opensans_regular"
                android:text="@string/service_price"
                android:textSize="12sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:layout_below="@id/serviceImage"
            android:alpha=".5" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>